Fix overflow on about me section

--- a/src/styles/AboutMeSection.module.css
+++ b/src/styles/AboutMeSection.module.css
@@ -1,7 +1,7 @@
 .section {
     margin-top: 30px;
     overflow: auto;
-    height: calc(100vh - 20vh)
+    height: calc(100vh - 190px)
 }
 
 @media (max-width: 550px) {
